Fixing printing crash bug 127891. Make the destruction of printing related frames not hide iframe's document viewers. r=rods@netscape.com, sr=rpotts@netscape.com